# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-luma-module"
version = "0.1.2"
authors = ["ASIMOV Community"]
edition = "2024"
rust-version = "1.85"
description = "ASIMOV module."
#documentation = "https://docs.rs/asimov-luma-module"
readme = true
homepage = "https://github.com/asimov-modules"
repository = "https://github.com/asimov-modules/asimov-luma-module"
license = "Unlicense"
keywords = ["asimov-module", "asimov", "ai"]
categories = ["command-line-utilities", "text-processing"]          # TODO
publish = false

[features]
default = ["all", "cli"]
all = ["pretty", "tracing"]
cli = ["asimov-module/cli", "dep:clap", "dep:clientele"]
unstable = []

# Optional features:
pretty = []
tracing = ["asimov-module/tracing", "clientele?/tracing"]

[dependencies]
asimov-module = { version = "25.0.0-dev.19", default-features = false, features = [
    "std",
] }
serde = { version = "1.0", default-features = false, features = [
    "std",
    "derive",
] }
serde_json = { version = "1.0" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "system-proxy",
    "gzip",
    "json",
] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0"
url = { version = "2.5", default-features = false }
colored_json = "5.0"
jq = { version = "0.1", default-features = false, features = ["all"] }

# Optional integrations:
clap = { version = "4.5", default-features = false, features = [
    "std",
], optional = true }
clientele = { version = "0.3.8", default-features = false, features = [
    "clap",
    "std",
], optional = true }

[profile.release]
opt-level = "z"
strip = true
lto = "thin"

[[bin]]
name = "asimov-luma-module"
path = "src/bin.rs"
required-features = ["cli"]

[[bin]]
name = "asimov-luma-fetcher"
path = "src/fetcher/main.rs"
required-features = ["cli"]
